<resources>
    <string name="app_name">AnimeList</string>
    <string name="anime_detail">Anime Detail</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="msg_home">Home</string>
    <string name="msg_mylist">MyList</string>
    <string name="msg_fav">Favorites</string>

    <string name="anime_name">Ansatsu Kyoushitsu</string>
    <string name="anime_type">Type</string>
    <string name="anime_genre">Genres</string>
    <string name="anime_synopsis">Synopsis</string>
    <string name="anime_episodes">Episodes</string>
    <string name="anime_score">Score</string>

    <string name="button_add_mylist">Add to MyList</string>
    <string name="button_add_fav">Add to Favorites</string>
    <string name="button_remove_fav">Remove Favorite</string>
    <string name="button_remove_list">Remove from MyList</string>
</resources>
